2009-04-22  Jeffrey Stedfast  <fejj@novell.com>

	* layout.cpp (layout_word_wrap): Add a bit more logic for infix
	separators. Finishes off MSDRT 208.

2009-04-22  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (value_from_str): permit empty int32's (they're 0).
	add comment about empty doubles.

2009-04-22  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (dependency_object_add_child): guard against adding an
	empty Value to a resource dictionary.  this happen when you have
	no content on a primitive type (<sys:Bool></sys:Bool>) and
	value_from_str can't deal with parsing an empty string.
	(value_from_str): for non-object/non-string types, we need to
	strip leading/trailing whitespace before attempting to parse. this
	allows things like: <sys:Bool> true </sys:Bool>
	(class XamlElementInstanceValueType): for empty elements the value
	will have never been set.  try to set it here using an empty
	string.

2009-04-22  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (OnPropertyChanged): Clamp our SelectionStart and
	SelectionLength values as they come in. Apparently this is what
	Silverlight does too.

2009-04-22  Chris Toshok  <toshok@ximian.com>

	* clock.h|cpp (Clock::UpdateFromParentTime): returns a bool now,
	with true meaning "i need another tick."
	(ClockGroup::UpdateFromParentTime): same.

	* timeline.cpp (DispatcherTimer::Start): use the timemanager to
	add the clock.
	(DispatcherTimer::Run): use the root_clock's parent clock here to
	simplify the code a bit.
	(DispatcherTimer::~DispatcherTimer): same.

	* animation.cpp (Storyboard::BeginWithError): simplify this a bit.
	we don't care about groups, just add it to the deployment's
	timemanager.

	* timemanager.h|cpp (class RootClockGroup): new class to represent
	the root clock group created by a time manager to house all other
	clocks in a surface.  It has slightly different behavior from a
	noprmal clock group, particularly wrt putting the timemanager to
	sleep.